@@ -7,7 +7,7 @@
  * OpenRCT2 is licensed under the GNU General Public License version 3.
  *****************************************************************************/
 
-#include "PlacePeepSpawnAction.h"
+#include "PeepSpawnPlaceAction.h"
 
 #include "../Cheats.h"
 #include "../OpenRCT2.h"
@@ -18,29 +18,29 @@
 #include "../world/Park.h"
 #include "../world/Surface.h"
 
-PlacePeepSpawnAction::PlacePeepSpawnAction(const CoordsXYZD& location)
+PeepSpawnPlaceAction::PeepSpawnPlaceAction(const CoordsXYZD& location)
     : _location(location)
 {
 }
 
-void PlacePeepSpawnAction::AcceptParameters(GameActionParameterVisitor& visitor)
+void PeepSpawnPlaceAction::AcceptParameters(GameActionParameterVisitor& visitor)
 {
     visitor.Visit(_location);
 }
 
-uint16_t PlacePeepSpawnAction::GetActionFlags() const
+uint16_t PeepSpawnPlaceAction::GetActionFlags() const
 {
     return GameActionBase::GetActionFlags() | GameActions::Flags::EditorOnly | GameActions::Flags::AllowWhilePaused;
 }
 
-void PlacePeepSpawnAction::Serialise(DataSerialiser& stream)
+void PeepSpawnPlaceAction::Serialise(DataSerialiser& stream)
 {
     GameAction::Serialise(stream);
 
     stream << DS_TAG(_location.x) << DS_TAG(_location.y) << DS_TAG(_location.z) << DS_TAG(_location.direction);
 }
 
-GameActions::Result PlacePeepSpawnAction::Query() const
+GameActions::Result PeepSpawnPlaceAction::Query() const
 {
     if (!(gScreenFlags & SCREEN_FLAGS_EDITOR) && !gCheatsSandboxMode)
     {
@@ -83,7 +83,7 @@ GameActions::Result PlacePeepSpawnAction::Query() const
     return res;
 }
 
-GameActions::Result PlacePeepSpawnAction::Execute() const
+GameActions::Result PeepSpawnPlaceAction::Execute() const
 {
     auto res = GameActions::Result();
     res.Expenditure = ExpenditureType::LandPurchase;
