@@ -4,10 +4,11 @@
 - Feature: [#18732] [Plugin] API to get the guests thoughts.
 - Feature: [#18744] Cheat to allow using a regular path as a queue path.
 - Feature: [#19023] Add Canadian French translation.
-- Improved: [#18749] Ability to have 4 active awards for more than one month in a row. 
+- Improved: [#18749] Ability to have 4 active awards for more than one month in a row.
 - Improved: [#18826] [Plugin] Added all actions and their documentation to plugin API.
 - Improved: [#18945] Languages can now fall back to other languages than English.
 - Improved: [#18970] Trying to load a non-park save will now display a context error.
+- Improved: [#19018] Renamed park entrance and peep spawn place actions to fit the naming scheme.
 - Improved: [#19044] Added special thanks to RMC and Wiegand to the About page.
 - Fix: [#18467] “Selected only” Object Selection filter is active in Track Designs Manager, and cannot be toggled.
 - Fix: [#18905] Ride Construction window theme is not applied correctly.
